2005-05-15  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/pci.c (pci_init): Added IRQ setup for all of the
	PCI interrupt pins.
	
2005-05-15  Marc Singer  <elf@cerise.buici.com>

	* src/lib/spinner.c (spinner_clear): clearing LED spinner when the
	user enters a command prompt.
 
	* src/mach-ixp42x/pci.c (pci_init): Proper PCI initialization
	brings USB and ethernet online.  Woot.

	* src/mach-ixp42x/nslu2.h: GPIO constants and macros for init.

	* src/mach-ixp42x/ixp42x.h: GPIO constants and macros for init.

	* src/mach-ixp42x/initialize.c (target_init): Addition of dead
	code to initialize GPIO for the Intel dev board.
 
	* src/mach-ixp42x/serial.c (ixp42x_serial_init): Enabled the
	serial FIFO.

2005-05-04  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c: Diagnostic code can be enabled from
	the configuration. 

	* src/apex/cmd-version.c (cmd_version): Display the length of apex
	in bytes as well as hex.

2005-04-14  Marc Singer  <elf@buici.com>

	* src/arch-arm/Kconfig: New option to let the user configure a
	default commandline to override the target's default.

	* src/mach-ixp42x/initialize.c (target_init): Added neglected EXP
	controller initializations for the nslu2.

2005-04-13  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c: Added configuration option to set the
	block device for both (fat & ext2) filesystem drivers.

	* src/apex/env.c: Fixed errors in the autoboot macros left over
	from the transition to Kconfig.

2005-04-08  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (emac_init): Fixed detection of the
	PHY.  Needed to setup MUX to get the PHY to enable.
	
	* src/mach-ixp42x/coprocessor.h (COPROCESSOR_WAIT\): New headers
	to define an instruction sequence to let the MMU/coprocessor catch
	up when there are changes to the setup.

	* src/arch-arm/entry/entry.c (__section): New options for
	disabling MMU at startup.

	* Makefile (every): Fixed every target for the sake of adding new
	configuration options.
